# learningPlanProject

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
bet_api/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yaml
bet_api/.sqlx/: query-2a5c325addfc71a8f4af146e0ecbdbb152a6a192ea7a453bc07bf293fc5e897a.json  query-72565a35f3eda5650580a115e8ae11ef97baa0820aa173aa8ded8d7db747aabd.json  query-c21c4bcca6905d2450b20c57e60af55d239f68582348c993ce8ba2f4a2e43e54.json  query-c21f28e9f0bef9f53d7e32f06930e0879e98b28e275cfd57d741205901713502.json  query-e8e233917909945ff9a45413060304fbdc5830717e51ab085542a131a2f8add7.json  query-fcb73b54fc7c798d389c750000abafecc623903eac4dfecbea80117874e0a51e.json
bet_api/bet-client/: Cargo.toml
bet_api/bet-client/src/: lib.rs
bet_api/contracts/: Cargo.toml
bet_api/contracts/src/: lib.rs
bet_api/migrations/: 20260622155531_create_bets.sql  20260622160437_alter_bets_float.sql  20260622160623_recreate_bets.sql  20260624172442_recreate_bets_for_events.sql
bet_api/src/: api_impl.rs  config.rs  docs.rs  domain.rs  error.rs  main.rs  repository.rs  state.rs  swagger_ui.html
contracts/: Cargo.toml
contracts/src/: lib.rs
docker/postgres-init/: 01-create-databases.sql
service-common/: Cargo.toml
service-common/src/: docs.rs  env.rs  lib.rs  shutdown.rs
src/: domain.rs  main.rs
trading-service/: .gitignore  Cargo.toml  Dockerfile  Makefile  openapi.yaml
trading-service/.sqlx/: query-5fdfa6ef4152f5b6f48eaef3be8a522c81d66d6ed2548621144d22db7d223b2b.json  query-d84cf026471e1966c08baced8850aed695c9cb245d4ffc88adfda9218b9e0669.json  query-db83e329d7248e7719bc02dfd449934bb72e0ac0c1c5136babbf6518cd789179.json
trading-service/migrations/: 20260629160700_create_events.sql  20260629160834_seed_events.sql  20260701093904_create_processed_bets.sql
trading-service/src/: api_impl.rs  config.rs  docs.rs  domain.rs  error.rs  kafka_consumer.rs  main.rs  repository.rs  state.rs  swagger_ui.html
trading-service/trading-client/: Cargo.toml  README.md
trading-service/trading-client/src/apis/: configuration.rs  default_api.rs
trading-service/trading-client/src/models/: error_response.rs  event.rs  mod.rs
