[package]
name = "bet_api"
version = "0.1.0"
edition = "2024"
[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
rdkafka = { version = "0.36", features = ["tokio"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.45", features = ["serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
bet-api-generated = { path = "generated", package = "openapi" }
async-trait = "0.1"
headers = "0.4"
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
http = "1"
contracts = { path = "contracts" }
[workspace]
members = [
    ".",
    "contracts",
    "generated",
    "bet-client",
]
