[package]
name = "trading_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "2.0"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
uuid = { version = "1", features = ["serde"] }
async-trait = "0.1"
headers = "0.4"
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
http = "1"
trading-api-generated = { path = "generated", package = "openapi" }

[workspace]
members = [
    ".",
    "generated",
    "trading-client"
]